--- a/Openai_o1_Reasoning_vs_GPT.ipynb
+++ b/Openai_o1_Reasoning_vs_GPT.ipynb
@@ -167,7 +167,7 @@
    "source": [
     "## Load and Analyze the Diamonds Dataset\n",
     "\n",
-    "This notebook uses the **diamonds dataset (`diamonds.csv`)**, which contains detailed attributes of diamonds, including weight, color, clarity, and price.\n",
+    "This notebook uses the **diamonds dataset ([diamonds.csv](https://github.com/lbsocial/data-analysis-with-generative-ai/blob/main/diamonds.csv))**, which contains detailed attributes of diamonds, including weight, color, clarity, and price.\n",
     "\n",
     "One interesting pattern in the dataset is that **diamonds with \"IF\" (Internally Flawless) clarity tend to have the lowest average price** compared to other clarity grades. This observation is counterintuitive, as one might expect the highest-clarity diamonds to be the most expensive."
    ]
