removed tweet analayze, updated prompt engineering

--- a/Twitter-Image-Classification-Recreation-Editing.ipynb
+++ b/Twitter-Image-Classification-Recreation-Editing.ipynb
@@ -187,7 +187,7 @@
    "source": [
     "mongo_client = MongoClient(mongodb_connect)\n",
     "db = mongo_client.demo # use or create a database named demo\n",
-    "tweet_collection = db.tweet_sample #use or create a collection named tweet_sample"
+    "tweet_collection = db.tweet_collection #use or create a collection named tweet_sample"
    ]
   },
   {
