--- a/Collect_Twitter_Data.ipynb
+++ b/Collect_Twitter_Data.ipynb
@@ -176,7 +176,7 @@
    },
    "outputs": [],
    "source": [
-    "query = 'election'  #query tweets contain the word of 'election'"
+    "query = 'generative ai'  #query tweets contain the word of 'generative ai'"
    ]
   },
   {
@@ -295,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
