--- a/Exploring-Twitter-Data-with-Vector-Databases-and-RAG-Systems.ipynb
+++ b/Exploring-Twitter-Data-with-Vector-Databases-and-RAG-Systems.ipynb
@@ -421,9 +421,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_python3",
+   "display_name": "conda_pytorch_p310",
    "language": "python",
-   "name": "conda_python3"
+   "name": "conda_pytorch_p310"
   },
   "language_info": {
    "codemirror_mode": {
@@ -435,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
