--- a/OpenAI-Assistant-Crafting-Email-Responses.ipynb
+++ b/OpenAI-Assistant-Crafting-Email-Responses.ipynb
@@ -218,9 +218,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "conda_pytorch_p310",
    "language": "python",
-   "name": "python3"
+   "name": "conda_pytorch_p310"
   },
   "language_info": {
    "codemirror_mode": {
@@ -232,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
