updated the notebook with more descrptions

--- a/Analyze_Tweets_Responses_API.ipynb
+++ b/Analyze_Tweets_Responses_API.ipynb
@@ -5,7 +5,7 @@
    "id": "86832346-9e59-4811-83ff-04e2e007e515",
    "metadata": {},
    "source": [
-    "# test responses api"
+    "# OpenAI Responses API: Advanced Tweet Analysis with File & Web Search Integration"
    ]
   },
   {
@@ -13,21 +13,72 @@
    "id": "55ea36b9-4484-4e95-a023-41e475f1af58",
    "metadata": {},
    "source": [
-    "what is response ai https://platform.openai.com/docs/guides/responses-vs-chat-completions\n",
+    "## What is the OpenAI Responses API?\n",
     "\n",
-    "`If you're a new user, we recommend using the Responses API.`"
+    "The Responses API is a new API released in March 2025. It is a combination of the traditional \n",
+    "Chat Completions API and the Assistants API, providing support for:\n",
+    "\n",
+    "- **Traditional Chat Completions:** Facilitates seamless conversational AI experiences.\n",
+    "- **Web Search:** Enables real-time information retrieval from the internet.\n",
+    "- **File Search:** Allows searching within files for relevant data.\n",
+    "\n",
+    "Accordingly, the Assistants API will be retired in 2026. \n",
+    "\n",
+    "> **For new users, OpenAI recommends using the Responses API instead of the Chat Completions API to leverage its expanded capabilities.**\n",
+    "\n",
+    "For a comprehensive comparison between the Responses API and the Chat Completions API, refer to the official OpenAI documentation: \n",
+    "[Responses vs. Chat Completions](https://platform.openai.com/docs/guides/responses-vs-chat-completions)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf3ae0b6-d8f5-4547-be96-bafdf768853c",
+   "metadata": {},
+   "source": [
+    "## Summary of This Notebook\n",
+    "This notebook provides a hands-on guide for using the **OpenAI Responses API** to analyze tweets. \n",
+    "It covers essential techniques such as:\n",
+    "\n",
+    "- **Connecting to a MongoDB database** to store and retrieve tweets.\n",
+    "- **Extracting tweets** and converting them into a structured format for further analysis.\n",
+    "- **Creating a vector store** and uploading tweets for semantic search.\n",
+    "- **Using file search** to analyze private datasets.\n",
+    "- **Performing web search** to retrieve the latest public information.\n",
+    "- **Utilizing stateful responses** to maintain conversation context.\n",
+    "- **Combining file and web search** to enhance retrieval-augmented generation (RAG) applications.\n",
+    "\n",
+    "By the end of this notebook, users will be able to integrate OpenAI's Responses API for efficient data retrieval \n",
+    "and analysis of structured and unstructured data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adbe454d-ac76-413a-b17c-f79c4873e9df",
+   "metadata": {},
+   "source": [
+    "## Install Required Libraries\n",
+    "To use the OpenAI Responses API and interact with a MongoDB database, we need to install the following libraries:\n",
+    "\n",
+    "- **`openai`**: Provides access to OpenAI's APIs, including the Responses API\n",
+    "- **`pymongo`**: A Python driver for MongoDB to store and retrieve tweets."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "6346923a-a409-4621-a6fc-d0f72dccde48",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "pip install openai pymongo"
+    "pip install openai pymongo -q"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9706b93-af03-4f7a-89bd-6649b11ba83c",
+   "metadata": {},
+   "source": [
+    "## Import Required Libraries"
    ]
   },
   {
@@ -37,7 +88,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import Markdown, display"
+    "from IPython.display import Markdown, display\n",
+    "import boto3\n",
+    "from botocore.exceptions import ClientError\n",
+    "import json\n",
+    "import io"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "818d0310-abab-49d2-9d7e-69c92112efd5",
+   "metadata": {},
+   "source": [
+    "## Retrieve Secrets from AWS Secrets Manager"
    ]
   },
   {
@@ -49,11 +112,6 @@
    },
    "outputs": [],
    "source": [
-    "import boto3\n",
-    "from botocore.exceptions import ClientError\n",
-    "import json\n",
-    "import io\n",
-    "\n",
     "def get_secret(secret_name):\n",
     "    region_name = \"us-east-1\"\n",
     "\n",
@@ -78,18 +136,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cb7ec95-c511-4d40-9786-96f3aee89fb7",
-   "metadata": {},
-   "source": [
-    "## Tweet Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "22aeb735-4c86-41fd-8ce7-893c07fad822",
    "metadata": {},
    "source": [
-    "### Connect to the MongoDB cluster"
+    "## Connect to MongoDB"
    ]
   },
   {
@@ -108,7 +158,7 @@
     "mongo_client = MongoClient(mongodb_connect)\n",
     "db = mongo_client.demo # use or create a database named demo\n",
     "tweet_collection = db.tweet_collection #use or create a collection named tweet_collection\n",
-    "tweet_collection.create_index([(\"tweet.id\", pymongo.ASCENDING)],unique = True) # make sure the collected tweets are unique"
+    "# tweet_collection.create_index([(\"tweet.id\", pymongo.ASCENDING)],unique = True) # make sure the collected tweets are unique"
    ]
   },
   {
@@ -116,7 +166,7 @@
    "id": "c0d9ccee-380a-4484-89e0-c00f8a9db9f7",
    "metadata": {},
    "source": [
-    "### Extract Tweets"
+    "## Extract Tweets from MongoDB"
    ]
   },
   {
@@ -141,6 +191,18 @@
     "  filter=filter,\n",
     "  projection=project\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c830cf03-025c-4b78-93d8-e57c4890f20d",
+   "metadata": {},
+   "source": [
+    "After retrieving tweets from MongoDB, we convert the query result into a list format for easier processing.\n",
+    "The data is then serialized into a JSON-formatted string, ensuring it can be properly stored and shared across different services.\n",
+    "Using `io.BytesIO`, we create an in-memory JSON file, eliminating the need for disk writes.\n",
+    "This approach is particularly useful for applications that require temporary file storage, such as uploading datasets\n",
+    "to OpenAI's file search API or cloud storage for further analysis."
    ]
   },
   {
@@ -177,7 +239,7 @@
    "id": "69bbd9ff-e0bc-4ec0-9fbc-b2f931defe4e",
    "metadata": {},
    "source": [
-    "## oepnai"
+    "## Initialize OpenAI Client"
    ]
   },
   {
@@ -198,9 +260,19 @@
    "id": "7ef03684-10fa-433c-a9ff-5f322fd215c3",
    "metadata": {},
    "source": [
-    "## file search\n",
+    "## File Search API\n",
     "\n",
-    "https://platform.openai.com/docs/guides/tools-file-search"
+    "### Introduction to File Search\n",
+    "File search API enables efficient retrieval of relevant information \n",
+    "from uploaded files by leveraging vector-based indexing. This feature is particularly useful \n",
+    "for searching large datasets, extracting insights, and improving retrieval-augmented generation (RAG) applications.\n",
+    "\n",
+    "Unlike traditional keyword-based searches, the Responses API uses embeddings \n",
+    "to identify semantically relevant content, making it ideal for analyzing structured \n",
+    "and unstructured text data (OpenAI, 2025).\n",
+    "\n",
+    "For more details, visit the official OpenAI documentation: \n",
+    "[File Search in Responses API](https://platform.openai.com/docs/guides/tools-file-search)."
    ]
   },
   {
@@ -208,7 +280,7 @@
    "id": "12034ce9-04cc-4f03-8573-9328f05c3735",
    "metadata": {},
    "source": [
-    "### create a vector store"
+    "### Create a Vector Store"
    ]
   },
   {
@@ -230,7 +302,7 @@
    "id": "1e80e5ee-4317-4317-8e46-493c3f5d2e95",
    "metadata": {},
    "source": [
-    "### upload tweets"
+    "### Upload Tweets File"
    ]
   },
   {
@@ -253,7 +325,7 @@
    "id": "b0a4c9ed-7b16-4178-914e-a4436b6d2971",
    "metadata": {},
    "source": [
-    "### attach fielt to the vector store"
+    "### Attach File to Vector Store"
    ]
   },
   {
@@ -276,7 +348,17 @@
    "id": "091a9cf3-a802-41a1-9707-e04ee1bdfd8f",
    "metadata": {},
    "source": [
-    "### query with vector store"
+    "### Query the Vector Store"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf3753c0-b763-403d-be6a-368d80f6714a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"the latest development in genai\""
    ]
   },
   {
@@ -286,7 +368,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"the latest development in genai\"\n",
     "search_results = client.vector_stores.search(\n",
     "    vector_store_id=vector_store_id,\n",
     "    query=query\n",
@@ -301,7 +382,15 @@
    "id": "77d89abc-a919-4563-9f06-8dfc9410a4ab",
    "metadata": {},
    "source": [
-    "## Openai Response API"
+    "## OpenAI Response API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ee1ecaa-6836-41d5-847e-853b62bcdd0b",
+   "metadata": {},
+   "source": [
+    "### Simple Response"
    ]
   },
   {
@@ -330,6 +419,14 @@
    "outputs": [],
    "source": [
     "display(Markdown(simple_response.output_text))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b468693-2250-4b09-994e-2eb52b1d5741",
+   "metadata": {},
+   "source": [
+    "### File Search Response"
    ]
   },
   {
@@ -366,9 +463,28 @@
    "id": "7ddd7ddc-64d0-49dc-a0f7-c24a4a1b8c31",
    "metadata": {},
    "source": [
-    "## web search\n",
+    "## Web Search API\n",
     "\n",
-    "https://platform.openai.com/docs/guides/tools-web-search"
+    "### Introduction to Web Search\n",
+    "The OpenAI Web Search tool allows models to retrieve real-time information from the internet. \n",
+    "This capability is particularly useful for obtaining up-to-date data, fact-checking, and expanding knowledge \n",
+    "without relying solely on pre-trained information. \n",
+    "\n",
+    "By leveraging OpenAI's web search functionality, the Responses API can fetch external data \n",
+    "and provide accurate, relevant results in real time (OpenAI, 2025). \n",
+    "This feature enhances applications that require the latest insights, such as news aggregation, research, \n",
+    "or dynamic content generation.\n",
+    "\n",
+    "For more details, visit the official OpenAI documentation: \n",
+    "[Web Search in Responses API](https://platform.openai.com/docs/guides/tools-web-search)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38f2bc7e-9a56-4695-8148-915d875ad716",
+   "metadata": {},
+   "source": [
+    "### Perform Web Search"
    ]
   },
   {
@@ -400,6 +516,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a85df607-d638-4d58-99a8-99a6cfe2d7e8",
+   "metadata": {},
+   "source": [
+    "### Stateful Response\n",
+    "\n",
+    "The OpenAI Responses API includes a stateful feature that enables continuity in interactions. \n",
+    "By using the `response_id`, a conversation can persist across multiple queries, \n",
+    "allowing users to refine or expand upon previous searches. This is particularly useful for iterative research, \n",
+    "dynamic content generation, and applications that require follow-up queries based on prior responses."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8b3e83a4-3437-4e9f-9732-748a35ccd43f",
@@ -408,6 +537,14 @@
    "source": [
     "fetched_response = client.responses.retrieve(response_id=web_search_response.id)\n",
     "display(Markdown(fetched_response.output_text[:100]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb2ca4d4-b2f7-4cd2-94b6-a0d2aec179cb",
+   "metadata": {},
+   "source": [
+    "### Continue Query with Web Search"
    ]
   },
   {
@@ -439,6 +576,19 @@
    "outputs": [],
    "source": [
     "display(Markdown(continue_search_response.output_text))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "132125be-48d9-4596-9dc5-bc12dca5fdbf",
+   "metadata": {},
+   "source": [
+    "### Combining File Search and Web Search\n",
+    "\n",
+    "This is an example of using file search to analyze private data and web search to retrieve public or the latest data. \n",
+    "The Responses API allows developers to integrate these tools to enhance retrieval-augmented generation (RAG) applications. \n",
+    "By combining file search with web search, users can leverage structured internal knowledge while also retrieving real-time \n",
+    "information from external sources, ensuring comprehensive and up-to-date responses. "
    ]
   },
   {
