--- a/Exploring-Twitter-Data-with-Vector-Databases-and-RAG-Systems.ipynb
+++ b/Exploring-Twitter-Data-with-Vector-Databases-and-RAG-Systems.ipynb
@@ -328,7 +328,7 @@
    },
    "outputs": [],
    "source": [
-    "user_query = 'support Trump'\n",
+    "user_query = 'Generative AI'\n",
     "\n",
     "for tweet in vector_search(user_query):\n",
     "    print(tweet['tweet']['text'])"
