--- a/Prompt-Engineering-Analyze-Twitter-Data.ipynb
+++ b/Prompt-Engineering-Analyze-Twitter-Data.ipynb
@@ -219,7 +219,7 @@
    "outputs": [],
    "source": [
     "messages = [\n",
-    "    {\"role\": \"system\", \"content\": \"use tone as a middle school teacher\"},\n",
+    "    {\"role\": \"system\", \"content\": \"use tone as a high school teacher\"},\n",
     "    {\"role\": \"user\", \"content\": \"What is the capital of USA\"}\n",
     "    ]\n",
     "\n",
