updated the image display code

--- a/Twitter-Image-Classification-Recreation-Editing.ipynb
+++ b/Twitter-Image-Classification-Recreation-Editing.ipynb
@@ -165,7 +165,7 @@
     "client = OpenAI(api_key=openai_api_key)\n",
     "\n",
     "\n",
-    "mongodb_connect = get_secret('mongodb')['connection_string']\n"
+    "mongodb_connect = get_secret('mongodb')['connection_string']"
    ]
   },
   {
@@ -406,121 +406,72 @@
     "tags": []
    },
    "source": [
-    "### Visualize the extracted items in MongoDB:\n",
+    "### Visualize the extracted items\n",
     "\n",
-    "- Apply the filter: `{'tweet.img_desc': {$ne: null}}` to ensure only tweets with image descriptions are included.\n"
+    "- Apply the filter: `{'tweet.img_desc': {$ne: null}}` to ensure only tweets with image descriptions are included.\n",
+    "- Heatmap: Create a heatmap to show the relationship between the entity type and entity name.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52f42d42-9476-4285-bdf6-284a3447b302",
+   "id": "fd7ffc3d-6307-40d7-8f59-46a166acba9d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from collections import Counter\n",
     "\n",
+    "# Load tweets with image descriptions\n",
     "tweets = list(tweet_collection.find({'tweet.img_desc': {'$ne': None}}))\n",
     "\n",
-    "# Extract entity data\n",
-    "entity_values = []\n",
-    "entity_types = []\n",
-    "tweet_data_with_desc=[]\n",
+    "# Initialize containers\n",
+    "entity_pairs = []\n",
+    "tweet_data_with_desc = []\n",
     "\n",
+    "# Process tweets\n",
     "for tweet in tweets:\n",
-    "    for url in tweet['tweet']['entities']['urls']:\n",
-    "        # print(url)\n",
-    "        if 'images' in url:\n",
-    "            # print(url['images'][1]['url'])\n",
-    "            tweet_data_with_desc.append({'tweet_id':tweet['tweet']['id'],\n",
-    "                               'image_url':url['images'][1]['url'] ,\n",
-    "                                 'image_desc':tweet['tweet']['img_desc']})\n",
-    "    \n",
-    "    entities = tweet.get('tweet', {}).get('img_entities', [])\n",
-    "    for entity in entities:\n",
-    "        entity_types.append(entity.get('entity_type'))\n",
-    "        entity_values.append(entity.get('entity_value'))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3d8ad4ac-1a50-4523-8447-077178a8985c",
-   "metadata": {},
-   "source": [
-    "- Bar Chart: Use a bar chart to show the values extracted from the images.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8fe252e7-8ebc-4050-9cd4-33c030c4dd47",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_values = pd.DataFrame(Counter(entity_values).items(), columns=['Entity Value', 'Count'])\n",
+    "    tweet_obj = tweet.get('tweet', {})\n",
+    "    tweet_id = tweet_obj.get('id')\n",
+    "    img_desc = tweet_obj.get('img_desc')\n",
     "\n",
-    "# Bar chart: Entity Values\n",
+    "    # Extract image URL if available\n",
+    "    for url in tweet_obj.get('entities', {}).get('urls', []):\n",
+    "        if isinstance(url, dict) and 'images' in url and isinstance(url['images'], list) and len(url['images']) > 1:\n",
+    "            tweet_data_with_desc.append({\n",
+    "                'tweet_id': tweet_id,\n",
+    "                'image_url': url['images'][1]['url'],\n",
+    "                'image_desc': img_desc\n",
+    "            })\n",
+    "\n",
+    "    # Extract entity pairs\n",
+    "    entities = tweet_obj.get('img_entities', [])\n",
+    "    if isinstance(entities, list):\n",
+    "        for entity in entities:\n",
+    "            etype = entity.get('entity_type')\n",
+    "            evalue = entity.get('entity_value')\n",
+    "            if isinstance(etype, str) and isinstance(evalue, str):\n",
+    "                entity_pairs.append((etype, evalue))\n",
+    "\n",
+    "# Heatmap from top 10 (type, value) pairs\n",
+    "top_10_pairs = Counter(entity_pairs).most_common(10)\n",
+    "top_df = pd.DataFrame(top_10_pairs, columns=['Pair', 'Count'])\n",
+    "top_df[['Entity Type', 'Entity Value']] = pd.DataFrame(top_df['Pair'].tolist(), index=top_df.index)\n",
+    "heatmap_data = top_df.pivot(index='Entity Type', columns='Entity Value', values='Count').fillna(0)\n",
+    "\n",
+    "# Plot heatmap\n",
     "plt.figure(figsize=(10, 6))\n",
-    "sns.barplot(data=df_values.sort_values(by='Count', ascending=False).head(10), y='Entity Value', x='Count')\n",
-    "plt.title('Top 10 Entity Values Extracted from Images')\n",
-    "plt.xticks(rotation=45, ha='right')\n",
+    "sns.heatmap(heatmap_data, cmap='Blues', annot=True, fmt='g', linewidths=0.5)\n",
+    "plt.title('Heatmap of Top 10 Entity Type vs. Entity Value Pairs', fontsize=14)\n",
+    "plt.xlabel('Entity Value', fontsize=12)\n",
+    "plt.ylabel('Entity Type', fontsize=12)\n",
+    "plt.xticks(rotation=45, ha='right', fontsize=10)\n",
+    "plt.yticks(fontsize=11)\n",
     "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "57ef4256-7841-49a5-a538-5d31dc44cae5",
-   "metadata": {},
-   "source": [
-    "- Bar Chart: Use another bar chart to display the entity types."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86c4f516-a5c2-4e52-9267-405681e44f1a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_types = pd.DataFrame(Counter(entity_types).items(), columns=['Entity Type', 'Count'])\n",
-    "\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "sns.barplot(data=df_types.sort_values(by='Count', ascending=False).head(10), y='Entity Type', x='Count')\n",
-    "plt.title('Top 10 Entity Types from Images')\n",
-    "plt.xticks(rotation=45, ha='right')\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ce9b8fca-d22d-4fcc-b7dc-4e9f8c909a56",
-   "metadata": {},
-   "source": [
-    "- Heatmap: Create a heatmap to show the relationship between the entity type and entity name."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43d4a2b9-5d63-4020-b318-21e8907d1ae7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "heatmap_data = pd.DataFrame([(e.get('entity_type'), e.get('entity_value')) \n",
-    "                             for t in tweets for e in t.get('tweet', {}).get('img_entities', [])],\n",
-    "                            columns=['Entity Type', 'Entity Value'])\n",
-    "heatmap_counts = heatmap_data.groupby(['Entity Type', 'Entity Value']).size().unstack(fill_value=0)\n",
-    "\n",
-    "# Heatmap: Entity Type vs Value\n",
-    "plt.figure(figsize=(16, 10))\n",
-    "sns.heatmap(heatmap_counts, cmap='Blues', linewidths=0.5)\n",
-    "plt.title('Heatmap of Entity Type vs. Entity Value')\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
