--- a/Exploring-Twitter-Data-with-Vector-Databases-and-RAG-Systems.ipynb
+++ b/Exploring-Twitter-Data-with-Vector-Databases-and-RAG-Systems.ipynb
@@ -350,7 +350,7 @@
    },
    "outputs": [],
    "source": [
-    "user_query = 'AI'\n",
+    "user_query = 'study ai'\n",
     "\n",
     "for tweet in vector_search(user_query):\n",
     "    print(tweet['tweet']['text'])"
@@ -381,14 +381,14 @@
     "chat_model = 'gpt-4o'\n",
     "temperature = 0\n",
     "\n",
-    "chat_history = [{\"role\": \"system\", \"content\": \"\"\"you are a chabot answer user questions based on the returned tweets\"\"\"}]\n",
+    "chat_history = [{\"role\": \"system\", \"content\": \"\"\" you are a chatbot, answer user questions based on the returned tweets.\"\"\"}]\n",
     "\n",
     "def chatbot(prompt):\n",
     "\n",
     "    chat_history.append({\"role\": \"user\", \"content\": prompt})\n",
     "    \n",
     "    tweets = vector_search(prompt)\n",
-    "    chat_history.append({\"role\": \"system\", \"content\": f\"here the returned tweets delimitered by {delimiter}{tweets}{delimiter}\"})\n",
+    "    chat_history.append({\"role\": \"system\", \"content\": f\" here the returned tweets delimited by {delimiter}{tweets}{delimiter}\"})\n",
     "\n",
     "    response = client.chat.completions.create(\n",
     "        model=chat_model,  # Use the model you prefer\n",
